Multiplication game/styles.css
#playingheader,
#playingMain,
#highscoresHeader,
#highscoresMain,
#scoreScreenHeader,
#scoreScreenMain{
    display: none;
}


.flex-container{
    display: flex;
    align-items: flex-start;
    background-color: aqua;
}


.side-container{
    align-items: center;
    width: 25vw;
    height: 30vw;
}

.input-sides{
    height: 27vw;
    border-style: dotted;
}


.center-container{
    width: 50vw;
}

.center-item{
    border-color: brown;
    justify-content: right;
}

.input-sides > .repetitions{
  flex-direction: column;
}


/* CSS */
/*
.start-btn {
  appearance: button;
  background-color: #1899D6;
  border: solid transparent;
  border-radius: 16px;
  border-width: 0 0 4px;
  box-sizing: border-box;
  color: #FFFFFF;
  cursor: pointer;
  display: inline-block;
  font-family: din-round,sans-serif;
  font-size: 15px;
  font-weight: 700;
  letter-spacing: .8px;
  line-height: 20px;
  margin: 0;
  outline: none;
  overflow: visible;
  padding: 13px 16px;
  text-align: center;
  text-transform: uppercase;
  touch-action: manipulation;
  transform: translateZ(0);
  transition: filter .2s;
  user-select: none;
  -webkit-user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
}

.button-19:after {
  background-clip: padding-box;
  background-color: #1CB0F6;
  border: solid transparent;
  border-radius: 16px;
  border-width: 0 0 4px;
  bottom: -4px;
  content: "";
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
  z-index: -1;
}

.button-19:main,
.button-19:focus {
  user-select: auto;
}

.button-19:hover:not(:disabled) {
  filter: brightness(1.1);
  -webkit-filter: brightness(1.1);
}

.button-19:disabled {
  cursor: auto;
}
}

